samples/_failures_safe/1761660259_51cb95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84a15229.c: In function ‘main’:
./samples/SAFE/__tmp_84a15229.c:154:5: error: expected declaration or statement at end of input
  154 |     char line[MAX_LINE_LENGTH];
      |     ^~~~
